Still trying to fix assets for when offline

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -14,7 +14,7 @@
       "installMode": "prefetch",
       "updateMode": "prefetch",
       "resources": {
-        "files": ["/assets/**"]
+        "files": ["/assets/**", "!/assets/bundled-plugins/**"]
       }
     },
     {
