--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,12 @@
               "src/manifest.json",
               "src/static",
               {
-                "glob": "**/*",
+                "glob": "open-sans-latin-{300,400,700}-*.woff2",
+                "input": "node_modules/@fontsource/open-sans/files",
+                "output": "/assets/fonts/open-sans"
+              },
+              {
+                "glob": "open-sans-latin-{300,400,700}-*.woff",
                 "input": "node_modules/@fontsource/open-sans/files",
                 "output": "/assets/fonts/open-sans"
               }
@@ -224,7 +229,12 @@
               "src/assets",
               "src/manifest.json",
               {
-                "glob": "**/*",
+                "glob": "open-sans-latin-{300,400,700}-*.woff2",
+                "input": "node_modules/@fontsource/open-sans/files",
+                "output": "/assets/fonts/open-sans"
+              },
+              {
+                "glob": "open-sans-latin-{300,400,700}-*.woff",
                 "input": "node_modules/@fontsource/open-sans/files",
                 "output": "/assets/fonts/open-sans"
               }
