--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,6 +5,7 @@
   "background_color": "#fff",
   "start_url": "./index.html",
   "display": "standalone",
+  "display_override": ["standalone", "fullscreen"],
   "orientation": "portrait-primary",
   "scope": "./",
   "allowJsEval": true,
